2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Comment "set -ex" and remove pointless ":;".

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Further simplify the script by making use of set -e
	and colons in substitutions, like ${foo:-bar}.  Although some truly
	ancient shells do not provide these features, this does not matter
	much for scripts intended for maintainer use.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Reduce number of rm -f invocations by means of line
	continuation.

2007-01-05  Daniel Elstner  <daniel.kitta@gmail.com>

	* regexxer.{desktop,schemas}.in: Move to ui/ directory to reduce
	clutter in the toplevel directory.
	* Makefile.am ({desktop,schemas}_in_files): Update accordingly.
	({desktop,schemas}_DATA): Likewise.
	(ui/stockimages.h): Do not rely on $(mkdir_p) because it is already
	obsolete but AC_PROG_MKDIR_P() is too recent to require.  Just use
	plain mkdir and test for the existence of the directory on failure.
	Also, add a comment explaining the implicit directory creation.

2007-01-05  Daniel Elstner  <daniel.kitta@gmail.com>

	* configure.ac (AC_PREREQ): Require Autoconf 2.58.
	(AC_CONFIG_MACRO_DIR): Specify m4 macro directory.
	(IT_PROG_INTLTOOL): Replace obsolete AC_PROG_INTLTOOL().  Require
	at least intltool 0.35 for full po/LINGUAS and po/Makevars support.
	(ALL_LINGUAS): No longer set this environment variable, but rely
	on po/LINGUAS support.  Get rid of the CONFIG_STATUS_DEPENDENCIES
	substitution hack.
	(GETTEXT_PACKAGE): Move the variable assignment to AC_SUBST().

	* po/Makevars: Reintroduce this file, as it is finally properly
	supported by intltool.  Set XGETTEXT_OPTIONS to the list of
	keywords xgettext should recognize.

	* autogen.sh: Get rid of the hack that appends XGETTEXT_KEYWORDS
	to po/Makefile.in.in.  Also change the invocation order of the
	various setup tools according to the recommendation found in the